[package]
name = "search"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
actix-web-httpauth = "0.5.1"
actix-cors = "0.5.4"
futures = "0.3.17"
tantivy = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
base64 = "0.13.0"
anyhow = "1.0.44"
#thiserror = "1.0.29"
log = "0.4.14"
pretty_env_logger = "0.4.0"

#[target.x86_64-unknown-linux-gnu]
[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]